--- a/main.tex
+++ b/main.tex
@@ -213,31 +213,30 @@ Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диа
 %техническое и организационное содержание работ.
 %----------------------------------------------------1.3.1. Выделение критериев сравнения
 \subsection{Выделение критериев сравнения}
-Требования к разрабатываемой системе
+К системе тестирования автомобильных систем можно предъявить следующие требования
 \begin{itemize}
 \itemАрхитектура тестов, разрабатываемых с помощью языка, должна быть событийно-управляемая.
 \itemЯзык должен быть проблемно-ориентированным.
 \itemЯзык должен позволять использовать BDD подход.
-\itemРеализация языка должна предоставлять функционал, необходимый для симуляции работы автомобильных сетей.
+\itemРеализация языка должна предоставлять возможность работы с автомобильными сетями.
 \end{itemize}
 
-\subsection{Обзор аналогов}
+\subsection{Обзор существующих решений}
 
 \begin{itemize}
 \item CAPL (Communication Access Programming Language)
 
-Компания Vector, разрабатывающая программные инструменты для работы с коммуникационными сетями, основывающихся на шинах CAN, LIN, FlexRay, Ethernet и др., используемыми в автомобильной промышленности создала программный пакет для разработчиков: CANoe. Этот инструмент поддерживает симуляцию работы сетей, предоставляет диагностические инструменты и т.д. Данный пакет используется большинством OEM-производителей и поставщиков автомобильных компонентов. В среде CANoe есть возможность разрабатывать тестовые сценарии на языке CAPL (Communication Access Programming Language).
+Компания Vector, разрабатывающая программные инструменты для работы с используемыми в автомобильной промышленности коммуникационными сетями, основывающихся на шинах CAN, LIN, FlexRay, Ethernet и др., создала программный пакет для разработчиков: CANoe. Этот инструмент поддерживает симуляцию работы сетей, предоставляет диагностические инструменты и т.д. Данный пакет используется большинством OEM-производителей и поставщиков автомобильных компонентов. В среде CANoe есть возможность разрабатывать тестовые сценарии на языке CAPL (Communication Access Programming Language).
 \begin{Figure}[h!]{Тестовая спецификация CAPL}{fcapl}
 {\includegraphics[width=\linewidth]{res/Capl}}
 \label{fig:image}
 \end{Figure}
-CAPL - процедурный язык, на котором выполнение блоков программы управляются событиями. Эти блоки программы упоминаются как событие процедуры \cite{Capl}.
-
-С помощью CAPL можно описать тесты, полностью покрывающие функциональные требования АС. Однако данный язык является Си подобным, достаточно трудным для понимания менеджерами и аналитиками.
+CAPL - процедурный язык, на котором выполнение блоков программы управляются событиями\cite{Capl}. 
+С помощью CAPL можно описать тесты, полностью покрывающие функциональные требования АС. Однако данный язык представляет собой язык низкого уровня, похожий на язык C, что затрудняет его понимание.
 
 \item CCDL
 
-Еще одним языком для описания тестовых спецификаций в автомобильной сфере является CCDL. Это язык тестовых спецификаций для тестирования, основанном на требованиях \cite {CCLD}. Предоставляет высокоуровневый язык тестирования. CCDL может использоваться для автоматизированного black box тестирования. Однако, спецификации содержат в себе программный код, и не предоставляют пользователям возможность в свободной форме описывать тестовые шаги (рис. \ref{fccdl}).
+Еще одним языком для описания тестовых спецификаций в автомобильной сфере является CCDL. Это язык тестовых спецификаций для тестирования, основанного на требованиях \cite {CCLD}. Предоставляет высокоуровневый язык тестирования. CCDL может использоваться для автоматизированного black box тестирования. Однако, спецификации содержат в себе программный код, и не предоставляют пользователям возможность в свободной форме описывать тестовые шаги (рис. \ref{fccdl}).
 
 \begin{Figure}[h!]{Тестовый сценарий на языке CCDL}{fccdl}
 {\includegraphics[width=\linewidth]{res/CAPL-EX}}
@@ -263,7 +262,7 @@ Cucumber – это фреймворк, реализующий подход BDD \cite{Cucumber}. В Cucumber для
 \end{itemize}
 
 \subsection{Результаты}
-Из вышеперечисленных инструментов для тестирования ПО видно, что ни один из них не позволяет описывать тестовые сценарии в свободной форме, при этом предоставляя возможность проверки поведения автомобильных систем на основе работы автомобильных систем. Таким образом существует необходимость в создании предметно-ориентированного языка для функционального тестирования, который объединит в себе принципы BDD и функционал, необходимый для симуляции работы автомобильных сетей CAN, LIN, Ethernet. Наличие такого языка значительно упростит разработку ПО и повысит качество разрабатываемого продукта.
+На основе приведенного обзора можно сделать вывод, что ни один из известных инструментов не позволяет описывать тестовые сценарии в свободной форме, при этом предоставляя возможность проверки поведения автомобильных систем на основе работы автомобильных систем. Таким образом существует необходимость в создании предметно-ориентированного языка для функционального тестирования, который объединит в себе принципы BDD и функциональность, необходимую для симуляции работы автомобильных сетей CAN и FlexRay. Наличие такого языка значительно упростит разработку ПО и повысит качество разрабатываемого продукта.
 
 %------------------------Уточненные требования к работе TODO
 \section{Уточненные требования к работе}
@@ -280,7 +279,6 @@ Cucumber – это фреймворк, реализующий подход BDD \cite{Cucumber}. В Cucumber для
 \itemТестовые сценарии должны выполняться в той очередности, в которой описаны в документе.
 \itemНеобходимо предоставить пользователю возможность работы с коммуникационными сетями автомобильных систем.
 \itemРезультаты выполнения тестов должны сохраняться в файл.
-\itemНеобходимо реализовать обработчик ошибок.
 \end{itemize}
 
 Качество решения, представленного в данной работе должно быть проверено следующим образом:
@@ -304,7 +302,7 @@ Cucumber – это фреймворк, реализующий подход BDD \cite{Cucumber}. В Cucumber для
 
 
 
-Прежде чем начать разрабатывать язык для описания сценариев тестирования автомобильных систем рассмотрим основные стандарты, используемые в транспортной промышленности.
+Прежде чем начать разрабатывать язык для описания сценариев тестирования автомобильных систем, рассмотрим основные стандарты, используемые в транспортной промышленности.
 
 
 Тестирование автомобильных систем предполагает, что поведение электрических блоков управления транспортного средства должно соответствовать стандарту UDS ISO 14229.
@@ -321,7 +319,7 @@ Cucumber – это фреймворк, реализующий подход BDD \cite{Cucumber}. В Cucumber для
 \end{Figure}
 
 \section{Описание протоколов передачи данных}
-Протоколы передачи данных Ethernet, LIN, CAN и FlexRay необходимы для осуществления обмена информацией между исправляющим и управляемым устройствами в автомобильной сети. Ethernet и LIN используются для малого спектра устройств. Помимо этого они используются во внутреннем обмене и для настоящий работы не представляют практического интереса. Рассмотрим подробнее протоколы CAN и FlexRay, необходимые для осуществления внешнего воздействия на тестируемое устройство.
+Протоколы передачи данных Ethernet, LIN, CAN и FlexRay необходимы для осуществления обмена информацией между исправляющим и управляемым устройствами в автомобильной сети. Ethernet и LIN используются для малого спектра устройств. Кроме того, они используются во внутреннем обмене и для настоящий работы не представляют практического интереса. Рассмотрим подробнее протоколы CAN и FlexRay, необходимые для осуществления внешнего воздействия на тестируемое устройство.
 \subsection{CAN}
 Controller Area Network (сеть контроллеров) -- это стандарт промышленной сети, отличительной особенностью которого является возможность объединения различных исполнительных устройств и датчиков в единую сеть. Он обладает тремя режимами передачи данных: последовательный, широковещательный и пакетный. Данный протокол был разработан компанией Bosh в середине 1980-х и по настоящее время используется в автомобильной промышленности, промышленной автоматизации. Скорость передачи данных по CAN шине может достигать 1 Мбит/с. Отличительной особенностью этого стандарта является возможность передачи в отрыве от физического уровня модели ISO. Однако в практическом применении CAN шина основана на топологии шина с физическим уровнем в виде дифференциальной пары. Передача кадров принимается всеми узлами сети. Рассмотрим виды кадров данного протокола:
 \begin{itemize}
@@ -339,7 +337,7 @@ Controller Area Network (сеть контроллеров) -- это стандарт промышленной сети, о
 \end{Figure}
 
 \subsection{FlexRay}
-В 2004 году компания NXP совместно с BMW, Diamler, Bosh, GM и Volkswagen представила новый сетевой протокол для автомобилей. Этот высокоскоростной сетевой протокол обладает пропускной способностью до 10 Мбит/с. Данная шина работает в цикле из двух сегментов: статического и динамического. Статический сегмент разделен на участки для отдельных типов обменов, предоставляя гарантии реального времени. Динамический сегмент в свою очередь работает по принципу, схожему с шиной CAN, где в данном случае контроль над шиной может быть получен участниками топологии в любой момент времени. Данный протокол используют вместо CAN, когда важна высокая скорость передачи данных.
+В 2004 году компания NXP совместно с BMW, Daimler, Bosch, GM и Volkswagen представила новый сетевой протокол для автомобилей. Этот высокоскоростной сетевой протокол обладает пропускной способностью до 10 Мбит/с. Данная шина работает в цикле из двух сегментов: статического и динамического. Статический сегмент разделен на участки для отдельных типов обменов, предоставляя гарантии реального времени. Динамический сегмент в свою очередь работает по принципу, схожему с шиной CAN, где в данном случае контроль над шиной может быть получен участниками топологии в любой момент времени. Данный протокол используют вместо CAN, когда важна высокая скорость передачи данных.
 
 Кадр данного протокола, представленный на рисунке \ref{fFlexRay}, разделен на три сегмента. Заголовочный сегмент состоит из полей постоянной длины. Первые пять бит отводятся под управляющие сигналы, к которым относятся: специально зарезервированный бит, бит указателя преамбулы, индикатор нулевого кадра, бит синхронизации, бит начала кадра. Следующие 11 бит представляют собой поле, хранящее идентификационный номер кадра. Длина полезной информации, которую несет в себе кадр, содержится в следующих 7 битах. На основе этих двух полей производится вычисление контрольной суммы заголовочного сегмента, которая хранится в следующих 7 битах. Последние 6 бит заголовочного сегмента являются счетчиком. Таким образом длина заголовочного сегмента равна 5 байтам.
 
@@ -359,7 +357,7 @@ Controller Area Network (сеть контроллеров) -- это стандарт промышленной сети, о
 
 Часто легко заметить, что входные данные имеют схожие характеристики. В этом случае их можно сгруппировать и подавать на вход только одну единицу данных из каждой группы. Идея заключается в разделении входных данных на классы эквивалентности таким образом, что каждый член класса обладает схожими характеристиками.
 
-Данный способ включается в себя два шага: определение класса эквивалентности и генерацию тестовых сценариев. Под определением класса эквивалентности подразумевается разделение входных данных на два класса: корректные и некорректные данные. Например, если действительный диапазон данных от 0 до 100, то в качестве корректных данных может быть выбрано значение 49, а в качестве некорректного 106.
+Данный способ включается в себя два шага: определение класса эквивалентности и генерацию тестовых сценариев. Например, если действительный диапазон данных от 0 до 100, под определением класса эквивалентности может пониматься разделение входных данных на два класса: корректные и некорректные данные. В этом случае в качестве корректных данных может быть выбрано значение 49, а в качестве некорректных 106.
 
 \itemАнализ граничных значений
 
@@ -373,7 +371,7 @@ Controller Area Network (сеть контроллеров) -- это стандарт промышленной сети, о
 Основываясь на общепринятых способах проверки качества программного обеспечения, а так же специфики области автомобильной промышленности алгоритм тестирования можно описать следующим образом:
 \begin{enumerate}
 \itemиз тестовой инструкции извлекаются данные, необходимые для отправки на ECU;
-\itemданные преобразуются в кадры управления VectorBox'ом;
+\itemданные преобразуются в кадры управления VectorBox;
 \itemинтерфейсный блок управления (VectorBox) генерирует управляющие сигналы и отправляет их на ECU;
 \itemпосле выполнения полученной инструкции ECU генерирует ответ, который отправляется на VectorBox;
 \itemпосле получения ответа от ECU VectorBox генерирует кадр и передает через интерфейс пользовательскому компьютеру (PC);
@@ -397,7 +395,7 @@ $S$ – начальный символ грамматики.
 
 %БНФ
 
-Во второй половине 20-го века Джон Брэкус и Ноам Хомски независимо друг от друга создали форму записи, которая в последствии стала методом формального описания синтаксиса языков \cite{conceptPL}.
+Во второй половине 20-го века Джон Бэкус и Ноам Хомски независимо друг от друга создали форму записи, которая в последствии стала методом формального описания синтаксиса языков \cite{conceptPL}.
 Форма Бэкуса-Наура (БНФ) – формальная система описания синтаксиса, используемая для описания контекстно-свободных грамматик, в которой одни синтаксические абстракции последовательно определяются через другие абстракции. Для описания синтаксических структур форма БНФ использует абстракции.
 
 Форма БНФ является порождающим устройством для определения языков. С помощью последовательности правил создаются предложения языка. Создание предложений называется выводом.
@@ -437,7 +435,7 @@ $S$ – начальный символ грамматики.
 
 %Компилируемый или интерпретируемый?
 \section{Разработка языка}
-Существует два главных вида языков программирования: компилируемый и интерпретируемый.
+Существует два главных способа реализации языков программирования: компиляцияй и интерпретация.
 Компилятор выясняет все, что должна выполнить программа, превращает инструкции в машинный код и сохраняет его, чтобы выполнить позже.
 Интерпретатор проходит всю программу строчку за строчкой и тут же выполняет.
 
@@ -452,13 +450,11 @@ $S$ – начальный символ грамматики.
 \itemИсполенение AST.
 \end{itemize}
 
-
-
-Естественные языки и искусственные, вне зависимости от их происхождения, представляют собой совокупность строк, состоящих из символа некоторого алфавита. Предложения или утверждения – это строки, состоящие из символов языка. Какие именно утверждения существуют в языке определяют синтаксические правила.
+Искусственные, вне зависимости от их происхождения, представляют собой совокупность строк, состоящих из символа некоторого алфавита. Предложения или утверждения – это строки, состоящие из символов языка. Какие именно утверждения существуют в языке определяют синтаксические правила.
 
 %---------------------------------------ЛЕКСИЧЕСКИЙ АНАЛИЗ
 \subsection {Лексический анализ}
-Первым шагом в разработке языков зачастую является лексический анализ – процесс аналитического разбора входной последовательности символов на лексемы, с целью получения на выходе идентифицированных последовательностей, называемых токенами. Токен – это малая единица языка. Токен может быть именем переменной или функции, оператором или числом.
+Первым шагом в разработке языков зачастую является лексический анализ – процесс аналитического разбора входной последовательности символов на лексемы, с целью получения на выходе идентифицированных последовательностей, называемых токенами. Токен – это наименьшая единица языка. Токен может быть именем переменной или функции, оператором или числом.
 
 Предполагается, что лексер берет входную строку, содержащую файлы с исходным кодом на разрабатываемом языке и разделяет его на список токенов. Лексер может выполнять такие задачи, как удаление комментариев, определение чисел и т.д.
 
