--- a/bibliography.bib
+++ b/bibliography.bib
@@ -14,7 +14,7 @@ year = {2006},
 }
 
 @book{Eshby1959,
-author="У.Р. Эшби",
+author="{У.Р. Эшби}",
 title="Введение в кибернетику",
 publisher="Рипол Классик",
 year="1959",
