--- a/main.tex
+++ b/main.tex
@@ -44,12 +44,24 @@ Keywords: domain specific language, functional testing, automobile systems.
 %для бакалаврских, дипломных и магистерских работ
 \item Срок сдачи работы.
 \item Исходные данные к проекту (работе).
+	Разработать и реализовать язык описания сценариев тестирования автомобильных систем. 
+	\subitemЯзык должен позволять пользователям описывать инструкции для тестовых сценариев в свободной форме.
+	\subitemСинтаксис языка должен позволять описывать несколько тестовых сценариев в документе.
+	\subitemТестовые сценарии должны выполняться в той очередности, в которой описаны в документе.
+	\subitemНеобходимо предоставить пользователю возможность работы с коммуникационными сетями автомобильных систем.
+	\subitemРезультаты выполнения тестовых сценариев должны сохраняться в файл.
 \item Содержание расчетно-пояснительной записки (перечень подлежащих 
 разработке вопросов).
+	\subitem Обзор литературы.
+	\subitem Описание аппаратной платформы.
+	\subitem Обзор методов описания и реализации проблемно-ориентированных языков.
+	\subitem Описание разработки и реализации языка.
+	\subitem Тестирования и опробация
+	\subitem Заключение и выводы
 \item Перечень графического материала с точным указанием обязательных 
 чертежей. Не предусмотрен.
 \item Консультанты по проекту (с указанием относящегося к ним разделов 
-проекта, работы).
+проекта, работы). Старший преподаватель Д.А. Тимофеев: описание и реализация разрабатываемого языка.
 }
 %для бакалаврских, дипломных и магистерских работ
 \makeabstract
@@ -274,17 +286,19 @@ Cucumber – это фреймворк, реализующий подход BDD \cite{Cucumber}. В Cucumber для
 
 Требования к работе:
 \begin{itemize}
-\itemЯзык должен позволять пользователям описывать инструкции для тестовых сценариев в свободной форме.
-\itemСинтаксис языка должен позволять описывать несколько тестовых сценариев в документе.
-\itemТестовые сценарии должны выполняться в той очередности, в которой описаны в документе.
-\itemНеобходимо предоставить пользователю возможность работы с коммуникационными сетями автомобильных систем.
-\itemРезультаты выполнения тестов должны сохраняться в файл.
+\itemРазработать язык.
+\subitemЯзык должен позволять пользователям описывать инструкции для тестовых сценариев в свободной форме.
+\subitemСинтаксис языка должен позволять описывать несколько тестовых сценариев в документе.
+\itemРеализовать интерпретатор.
+\subitemТестовые сценарии должны выполняться в той очередности, в которой описаны в документе.
+\subitemНеобходимо предоставить пользователю возможность работы с коммуникационными сетями автомобильных систем.
+\subitemРезультаты выполнения тестов должны сохраняться в файл.
 \end{itemize}
 
 Качество решения, представленного в данной работе должно быть проверено следующим образом:
 \begin{itemize}
 \itemнеобходимо провести опрос среди потенциальных пользователей языка для выявления степени удобства использования синтаксиса.
-\itemвыполнить тестирование реализации языка.
+\itemвыполнить тестирование интерпретатора.
 \end{itemize}
 %------------------------------------Теоретическая часть. Разработка языка
 \chapter{Платформа тестирования}
@@ -912,8 +926,14 @@ InstructionIsNotDeclared&Instruction 'request [] in functional addressing mode' 
 %новизне и практической ценности ВКР. Предложения по внедрению результатов,
 %перспективы продолжения работы
 
-В результате проведенной работы был разработан и реализован язык описания сценариев для тестирование программного обеспечения автомобильных систем. Данный язык пользователям описывать инструкции для тестовых сценариев в свободной форме. В одном документе можно описать несколько тестовых сценариев, выполняющихся поочередно в той последовательности, в которой были указаны в тестовой спецификации. Данные, полученные в результате выполнения теста сохраняются в отдельный файл. 
+В результате проведенной работы был разработан и реализован язык описания сценариев для тестирование программного обеспечения автомобильных систем. 
 
+
+Данный язык пзволяет пользователям описывать инструкции для тестовых сценариев в свободной форме. Для этого была реализована возможность пользователям задавать тестовые инструкции в специальной пользовательской бибилиотеке. В одном документе можно описать несколько тестовых сценариев. Тестовая спецификация должна содержать не менее одного сценария тестирования. 
+
+Для реализации языка был разработан интерпретатор. Указаные в тестовой документации сценарии интерпретатор выполняет поочередно в той последовательности, в которой они были указаны в тестовой спецификации. Так же была реализована возможность работы с автомобильными шинами CAN и FLexFray. Данные, полученные в результате выполнения теста сохраняются в отдельный файл. 
+
+Так же было выполнено модульное тестирование интерпретатора, позволившее проверить степень качества разработанного продукта.
 
 По результатам опроса, проведенного среди опытных тестировщиков автомобильных систем выявлено, что разработанный язык мог бы использоваться на производстве. Однако очевидно, язык может быть улучшен. Для удобства использования разработанного языка в дальнейшем стоит изменить формат вывода результатов и представлять их в качестве таблицы, или же в каком-либо другом формате. Так же стоит реализовать графический интерфейс для удобства пользователей, в котором в режиме реального времени могли бы выводиться результаты тестового прогона. 
 
