--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,58 +1,75 @@
 
-@STANDARD{stUds,
-  title = {Road vehicles — Unified diagnosticservices (UDS) —Part 1:Specification and requirements},
-  type = {ISO},
-  number = {14229-1},
-  year = {2013}
+@book{stUds,
+  title = {Road vehicles — Unified diagnostic services (UDS) —Part 1:Specification and requirements},
+  type = {"ISO"},
+  number = "{14229-1}",
+  publisher = {"International Organization for Standardization (ISO)"},
+  numpages = "392",
+  year = {2013},
+  language="english"
 }
 
 @article{BDD,
-author = {Dan North},
-journal = {Better Software},
-title    = {The evolution of behavior-driven development},
-year = {2006}, 
+	author = {Dan North},
+	journal = {Better Software},
+	title= {The evolution of behavior-driven development},
+	year = {2006}, 
+	language="english"
 }
 
 @book{Eshby1959,
-author="{У.Р. Эшби}",
-title="Введение в кибернетику",
-publisher="Рипол Классик",
-year="1959",
-pages="432 с.",
-language="russian"
+	author="{Эшби, У.Р.}",
+	title="Введение в кибернетику",
+	publisher="Рипол Классик",
+	year="1959",
+	numpages="432",
+	language="russian"
 }
 
 @book{conceptPL,
-author="Р.У. Себеста",
-title="Основные концепты языков программирования",
-year="2001",
-pages="670 с.",
-language="russian"
+	author="{Себеста, Р.У.}",
+	title={Основные концепции языков программирования},
+	publisher="Вильямс",
+	year="2001",
+	numpages="670",
+	language="russian"
 }
 
 
 @article{wwwXLDriverLib,
-title    = {XL-Driver-Library},
-url  = {https://www.vector.com/int/en/products/products-a-z/libraries-drivers/xl-driver-library/},
-year = {2019}, 
+	key = "INTERNET",
+	title    = {XL-Driver-Library},
+	url  = "\url{https://www.vector.com/int/en/products/products-a-z/libraries-drivers/xl-driver-library/}",
+	author = "{Vector Informatik GmbH}",
+	year = {2019},
+	language={english}
 }
 
 @article{Capl,
-title    = {Quick Introduction To CAPL },
-author = {Bruce Emaus},
-year = {2003}   , 
+	journal = {CAN Newsletter},
+	title  = {Quick Introduction To CAPL},
+	author = {Bruce Emaus},
+	year   = {2003}   , 
+	language={english}
 }
 
 @article{CCLD,
-title    = {CCDL: The Composable Components Description Language},
-url  = {https://www.razorcat.com/en/product-ccdl.html/},
-year = {2019}, 
+	title    = {CCDL: The Composable Components Description Language},
+	journal = {"International Journal on Software Tools for Technology Transfer"},
+	url  = {https://link.springer.com/article/10.1007/s10009-006-0017-7},
+	author = {Sora I., Verbaeten P., Berbers Y.},
+	year = {2006}, 
+	publisher ={Springer-Verlag},
+	language={english}
 }
 
-@article{Cucumber,
-title    = {Cucumber. Introduction},
-url  = {https://cucumber.io/docs/guides/overview/},
-year = {2019}, 
+@book{Cucumber,
+	title    = {The Cucumber Book. Behaviour-Driven Development for Testers and Developers},
+	publisher = {Pragmatic Bookshelf},
+	numpages = 336,
+	author = {Hellesoy A., Wynne M., Tooke S.},
+	year = {2017}, 	
+	language={english}
 }
 
 
@@ -69,27 +86,27 @@ title="Тестирование чёрного ящика. Технологии функционального тестирования прогр
 address="Питер",
 publisher="Питер",
 year=2004,
-pages="320 с.",
+numpages="320",
 language="russian"
 }
 
 @book{JavaTom1,
-author="К.С. Хорстманн",
-title="Java. Библиотека профессионала, том 1. Основы",
-publisher="ИД Вильямс",
-year=2017,
-pages="864 с.",
-language="russian"
+	author="{Хорстманн, К.С.}",
+	title={Java. Библиотека профессионала, том 1. Основы},
+	publisher="Вильямс",
+	year=2017,
+	numpages="864",
+	language="russian"
 }
 
 
 @book{EvansE,
-author="Эванс Эрик",
-title="Предметно-ориентированное проектирование",
-publisher="Вильямс",
-year=2010,
-pages="448 с.",
-language="russian"
+	author="{Эванс Э.}",
+	title="Предметно-ориентированное проектирование",
+	publisher="Вильямс",
+	year=2010,
+	numpages="448",
+	language="russian"
 }
 
 
@@ -98,7 +115,7 @@ author="Debasish Ghosh",
 title="DSLs in action",
 publisher="Manning Publications",
 year=2010,
-pages="376 с.",
+numpages="376",
 language="russian"
 }
 
