--- a/main.tex
+++ b/main.tex
@@ -189,7 +189,7 @@ Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диа
 \item \emph{Then} – проверка, что получены некоторые результаты
 \end{itemize}
 
-На основе вышеперечисленных принципов BDD был создан язык Gherkin \cite{Gherkin} – человеко-читаемый язык, используемый для описания поведения системы.
+На основе вышеперечисленных принципов BDD был создан язык Gherkin \cite{Cucumber} – человеко-читаемый язык, используемый для описания поведения системы.
 
 С точки зрения автомобильной индустрии, в которых функциональное тестирование ПО подразумевает достаточно нетривиальную задачу данный подход сильно облегчает взаимодействие между всеми бизнес участниками. Однако не существует инструмента, облегчающего разработку документации, а как следствия взаимопонимания между менеджерами и инженерами и, в то же время, учитывающего особенности данной сферы.
 
